--- a/tasks/installgenomes.yml
+++ b/tasks/installgenomes.yml
@@ -16,46 +16,28 @@
     name: "{{ ephemeris_package }}"
     state: latest
 
-- name: Make sure work directories are empty
+- name: Create empty work directory
   file:
-    path: "{{item}}"
-    state: absent
-  with_items:
-    - "{{galaxy_docker_tool_dir}}"
-    - "{{galaxy_docker_dbkeys_dir}}"
-
-- name: Make sure work directories are created
-  file:
-    path: "{{item}}"
-    state: directory
-  with_items:
-    - "{{galaxy_docker_tool_dir}}"
-    - "{{galaxy_docker_dbkeys_dir}}"
+    path: "{{galaxy_docker_dbkeys_dir}}"
+    state: "{{item}}"
+  with_items: 
+    - present
+    - absent
 
 - name: Find yml files in tool list directory
   find:
-    paths: "{{item}}"
+    paths: "{{dbkeys_list_dir}}"
     patterns:
       - "*.yml"
       - "*.yaml"
-  register: yamls
+  register: dbkeys
   delegate_to: 127.0.0.1
   become: no
-  with_items:
-    - "{{tool_list_dir}}"
-    - "{{dbkeys_list_dir}}"
-
-- set_fact:
-    tools: "{{yamls.results[0]}}"
-    dbkeys: "{{yamls.results[1]}}"
 
 - name: Show which yamls will be transferred
   debug: 
-    var: "{{item}}"
+    var: dbkeys
     verbosity: 1
-  with_items:
-    - tools
-    - dbkeys
 
 - name: delete api key from files
   lineinfile:
@@ -63,7 +45,6 @@
     regexp: "api_key:.*"
     state: absent
   with_items: 
-    - "{{tools.files}}"
     - "{{dbkeys.files}}"
   become: no
   delegate_to: 127.0.0.1
@@ -74,19 +55,9 @@
     regexp: "galaxy_instance:.*"
     state: absent     
   with_items: 
-    - "{{tools.files}}"
     - "{{dbkeys.files}}"
   become: no
   delegate_to: 127.0.0.1
-
-- name: Move tools to galaxy server
-  copy:
-    dest: "{{galaxy_docker_tool_dir}}/{{item.path | basename}}"
-    src: "{{item.path}}"
-    force: yes
-    mode: 0600
-  with_items:
-    - "{{tools.files}}"
 
 - name: Move dbkeys to galaxy server
   copy:
@@ -105,27 +76,19 @@
       - "*.yaml"
   register: yamls
   with_items:
-    - "{{galaxy_docker_tool_dir}}"
     - "{{galaxy_docker_dbkeys_dir}}"
 
 - set_fact:
     tools: "{{yamls.results[0]}}"
     dbkeys: "{{yamls.results[1]}}"
 
-- name: Use ephemeris shed install to install tools 
-  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -t {{item.path}}"
-  with_items: "{{tools.files}}"
-  ignore_errors: yes
-
-- name: Use ephemeris shed install to install reference genomes
-  command: "run-data-managers -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} --config {{item.path}}"
+- name: Use ephemeris shed install to run data managers
+  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -d {{item.path}}"
   with_items: "{{dbkeys.files}}"
   ignore_errors: yes
 
+
 - name: remove added files
   file:
-    path: "{{item}}"
+    path: "{{galaxy_docker_dbkeys_dir}}"
     state: absent
-  with_items:
-    - "{{galaxy_docker_tool_dir}}"
-    - "{{galaxy_docker_dbkeys_dir}}"
