--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,6 +43,9 @@
 - include: installtools.yml
   when: installtools
 
+- include: installgenomes.yml
+  when: installgenomes
+
 - include: extractdb.yml
   when: extractdb
 
