--- a/tasks/installtoolsandgenomes.yml
+++ b/tasks/installtoolsandgenomes.yml
@@ -16,23 +16,16 @@
     name: "{{ ephemeris_package }}"
     state: latest
 
-- name: Make sure work directories are empty
+- name: Create empty temp directory
   file:
-    path: "{{item}}"
-    state: absent
+    path: "{{galaxy_docker_tmp_dir}}"
+    state: "{{item}}"
+    mode: 0700
   with_items:
-    - "{{galaxy_docker_tool_dir}}"
-    - "{{galaxy_docker_dbkeys_dir}}"
+    - absent
+    - directory
 
-- name: Make sure work directories are created
-  file:
-    path: "{{item}}"
-    state: directory
-  with_items:
-    - "{{galaxy_docker_tool_dir}}"
-    - "{{galaxy_docker_dbkeys_dir}}"
-
-- name: Find yml files in tool list directory
+- name: Find yml files in tool and dbkeys directory
   find:
     paths: "{{item}}"
     patterns:
@@ -51,8 +44,11 @@
 
 - name: Show which yamls will be transferred
   debug: 
-    var: tools
+    var: "{{item}}"
     verbosity: 1
+  with_items:
+    - tools
+    - dbkeys
 
 - name: delete api key from files
   lineinfile:
@@ -76,9 +72,9 @@
   become: no
   delegate_to: 127.0.0.1
 
-- name: Move tools to galaxy server
+- name: Move tools and dbkeys to server
   copy:
-    dest: "{{galaxy_docker_tool_dir}}/{{item.path | basename}}"
+    dest: "{{galaxy_docker_tmp_dir}}/tools.{{item.path | basename}}"
     src: "{{item.path}}"
     force: yes
     mode: 0600
@@ -87,42 +83,24 @@
 
 - name: Move dbkeys to galaxy server
   copy:
-    dest: "{{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
+    dest: "{{galaxy_docker_tmp_dir}}/dbkeys.{{item.path | basename}}"
     src: "{{item.path}}"
     force: yes
     mode: 0600
   with_items:
     - "{{dbkeys.files}}"
 
-- name: Create a file list from the directory
-  find: 
-    paths: "{{item}}"
-    patterns: 
-      - "*.yml"
-      - "*.yaml"
-  register: yamls
-  with_items:
-    - "{{galaxy_docker_tool_dir}}"
-    - "{{galaxy_docker_dbkeys_dir}}"
-
-- set_fact:
-    tools: "{{yamls.results[0]}}"
-    dbkeys: "{{yamls.results[1]}}"
-
 - name: Use ephemeris shed install to install tools 
-  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -t {{item.path}}"
+  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -t {{galaxy_docker_tmp_dir}}/tools.{{item.path | basename}}"
   with_items: "{{tools.files}}"
   ignore_errors: yes
 
 - name: Use ephemeris shed install to install reference genomes
-  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -d {{item.path}}"
+  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_master_api_key}} -d {{galaxy_docker_tmp_dir}}/dbkeys.{{item.path | basename}}"
   with_items: "{{dbkeys.files}}"
   ignore_errors: yes
 
 - name: remove added files
   file:
-    path: "{{item}}"
+    path: "{{galaxy_docker_tmp_dir}}"
     state: absent
-  with_items:
-    - "{{galaxy_docker_tool_dir}}"
-    - "{{galaxy_docker_dbkeys_dir}}"
