--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -34,8 +34,10 @@ galaxy_uid: "1450"
 # File locations:
 welcome_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/welcome/"
 import_db: "{{inventory_hostname}}/database_import/"
-tool_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/tools"
-dbkeys_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/dbkeys"
+tool_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/tools/"
+dbkeys_list_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/dbkeys/"
+genomes_dir: "{{playbook_dir}}/files/{{inventory_hostname}}/genomes/"
+fetch_location: "files/{{inventory_hostname}}/database_extract/"
 
 # defaults for addldap
 ldap_defaults:
@@ -70,7 +72,6 @@ delete_backup_files: False
 backup_db_compression_level: 6
 backup_db_filename: "galaxy_database.{{ansible_date_time.iso8601}}.dump"
 exported_db_file: "postgresql/{{backup_db_filename}}"
-fetch_location: "files/{{inventory_hostname}}/database_extract/"
 
 #defaults for importdb
 import_db_location: "database_import"
@@ -80,8 +81,11 @@ docker_default_location: "/var/lib/docker"
 
 # defaults for installtools
 galaxy_docker_tool_dir: "/tmp/galaxy_tool_lists"
-galaxy_docker_dbkeys_dir: "/tmp/galaxy_dkeys_lists"
 
+# defaults for installgenomes
+galaxy_docker_dbkeys_dir: "/tmp/galaxy_dkeys_lists"
+galaxy_docker_genome_copy_links: yes
+galaxy_docker_genomes_dest: "{{docker_export_location}}/genomes"
 #defaults for upgrade
 test: False
 overwrite_config_files: False #Overwrites old config files with new distribution_config files
