--- a/tasks/installgenomes.yml
+++ b/tasks/installgenomes.yml
@@ -84,13 +84,20 @@
     src: "{{genomes_dir}}"
     archive: no
     recursive: yes
+    checksum: yes
   vars:
     ansible_ssh_pipelining: False
 
-- name: Use ephemeris shed install to run data managers
-  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_docker_admin_api_key}} -d {{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
+#- name: Use ephemeris shed install to run data managers
+#  command: "shed-install -g localhost:{{galaxy_web_port}} -a {{galaxy_docker_admin_api_key}} -d {{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
+#  with_items: "{{dbkeys.files}}"
+#  ignore_errors: yes
+
+- name: Use ephemeris run-data-managers to run data managers
+#  command: "run-data-managers -g localhost:{{galaxy_web_port}} -a {{galaxy_docker_admin_api_key}} --config {{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
+  command: "run-data-managers -g localhost:{{galaxy_web_port}} -u {{galaxy_docker_admin_user}} -p {{galaxy_docker_admin_password}} --config {{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
   with_items: "{{dbkeys.files}}"
-  ignore_errors: yes
+#  ignore_errors: yes
 
 - name: remove added files
   file:
