--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -86,6 +86,11 @@ galaxy_docker_tool_dir: "/tmp/galaxy_tool_lists"
 galaxy_docker_dbkeys_dir: "/tmp/galaxy_dkeys_lists"
 galaxy_docker_genome_copy_links: yes
 galaxy_docker_genomes_dest: "{{docker_export_location}}/genomes"
+galaxy_docker_ephemeris_repo: "https://github.com/rhpvorderman/ephemeris.git"
+galaxy_docker_ephemeris_branch: "allfixes"
+galaxy_docker_ephemeris_dir: "/opt/ephemeris"
+
+
 #defaults for upgrade
 test: False
 overwrite_config_files: False #Overwrites old config files with new distribution_config files
