--- a/tasks/installgenomes.yml
+++ b/tasks/installgenomes.yml
@@ -13,8 +13,9 @@
 
 #- name: Install required ephemeris package
 #  pip:
-#    name: "{{ ephemeris_package }}"
-#    state: latest
+#    name: "{{ galaxy_docker_ephemeris_package }}"
+#    state: present
+#    version: "{{ galaxy_docker_ephemeris_version }}"
 
 - name: install git
   package:
@@ -121,6 +122,12 @@
 #  command: "run-data-managers -g localhost:{{galaxy_web_port}} -u {{galaxy_docker_admin_user}} -p {{galaxy_docker_admin_password}} --config {{galaxy_docker_dbkeys_dir}}/{{item.path | basename}}"
   with_items: "{{dbkeys.files}}"
 #  ignore_errors: yes
+  register: result
+
+- name: Debug ephemeris output
+  debug:
+    var: result.stderr
+    verbosity: 1
 
 - name: remove added files
   file:
