--- a/vars/main.yml
+++ b/vars/main.yml
@@ -37,8 +37,9 @@ packages:
   - docker-engine
 
 # vars for installtools:
-ephemeris_package:
+galaxy_docker_ephemeris_package:
   - ephemeris
+galaxy_docker_ephemeris_version: 0.6.2
 
 # vars for rundockergalaxy
 docker_published_ports: ""
