--- a/vars/main.yml
+++ b/vars/main.yml
@@ -37,8 +37,7 @@ packages:
   - docker-engine
 
 # vars for installtools:
-galaxy_docker_ephemeris_package:
-  - ephemeris
+galaxy_docker_ephemeris_package: ephemeris
 galaxy_docker_ephemeris_version: 0.6.2
 
 # vars for rundockergalaxy
