--- a/tasks/installgenomes.yml
+++ b/tasks/installgenomes.yml
@@ -9,6 +9,10 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
+- name: check if galaxy has started
+  command: echo this always reports as changed
+  notify: check if galaxy has started
+
 - meta: flush_handlers
 
 #- name: Install required ephemeris package
