--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -19,3 +19,8 @@
   until: 'galaxy_brand in result.content'  
   retries: 20 
   delay: 10
+
+- name: restart galaxy in container
+  command: "docker exec {{docker_container_name}} {{command}}"
+  vars:
+    command: "supervisorctl restart {{supervisorctl_galaxy | default('galaxy')}}:*"
