--- a/tasks/nginxsettings.yml
+++ b/tasks/nginxsettings.yml
@@ -43,6 +43,26 @@
         - "gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript"
         - "uwsgi_read_timeout 300"
 
+- name: Add test upgrade profile. 
+  set_fact:
+    nginx_sites_test_upgrade:
+      test_upgrade_galaxy:
+        - "listen {{test_upgrade_settings.public_galaxy_web_port }}"
+        - "server_name {{ galaxy_web_urls | join(' ') }}"
+        - "location / { proxy_pass http://test_upgrade_galaxy; }"
+        - "client_max_body_size {{max_upload_size}}"
+    nginx_configs_test_upgrade:
+      upstream:
+        - "{{nginx_configs.upstream[0]}}"
+        - "upstream test_upgrade_galaxy { server localhost:{{test_upgrade_settings.galaxy_web_port}}; }"
+  when: test_upgrade
+
+- name: combine test upgrade profile with regular galaxy profile
+  set_fact:
+    nginx_sites: "{{ nginx_sites | combine(nginx_sites_test_upgrade)}}"
+    nginx_configs: "{{ nginx_configs | combine(nginx_configs_test_upgrade) }}"
+  when: test_upgrade
+  
 - name: show variables
   debug:
     var: "{{item}}"
