--- a/tasks/upgrade.yml
+++ b/tasks/upgrade.yml
@@ -11,8 +11,8 @@
 
 - name: Setting new docker container for the test upgrade. 
   set_fact:
-    docker_container_name: "{{test_upgrade.docker_container_name}}"
-  when: test
+    docker_container_name: "{{test_upgrade_settings.docker_container_name}}"
+  when: test_upgrade
 
 - name: Remove docker container before migrating
   docker_container:
@@ -22,13 +22,13 @@
 
 - name: moving to another export folder for testing
   include: test.yml
-  when: test
+  when: test_upgrade
 
 - name: delete .distribution_config folder
   file:
     path: "{{docker_export_location}}/.distribution_config"
     state: absent
-  when: not test
+  when: not test_upgrade
 
 - name: Start docker container
   docker_container:
