--- a/host_vars/example_host/upgrade.settings
+++ b/host_vars/example_host/upgrade.settings
@@ -1,11 +1,11 @@
 overwrite_config_files: False
 
-test_upgrade:
-  docker_image: "bgruening/galaxy-stable:17.01"
+test_upgrade_settings:
+  docker_image: "bgruening/galaxy-stable:17.05"
   docker_container_name: test_upgrade_galaxy
   docker_export_location: "/data/galaxy/test_upgrade_galaxy/galaxy_storage"
   ufw_profile: test_upgrade_galaxy
-  galaxy_web_port: 8080
-  galaxy_ftp_port: 8821
-  galaxy_sftp_port: 8822
-  galaxy_brand: "Test upgrade of Galaxy to 17.01"
+  galaxy_web_port: 8888
+  public_galaxy_web_port: 8880
+  galaxy_brand: "Test upgrade of Galaxy to 17.05"
+
