--- a/roles/ansible-role-galaxy_docker/handlers/main.yml
+++ b/roles/ansible-role-galaxy_docker/handlers/main.yml
@@ -24,3 +24,4 @@
   command: "docker exec {{docker_container_name}} {{command}}"
   vars:
     command: "supervisorctl restart {{supervisorctl_galaxy | default('galaxy')}}:*"
+  notify: check if galaxy has started
