installtools and installgenomes use same ephemeris installer

--- a/roles/ansible-role-galaxy_docker/tasks/installtools.yml
+++ b/roles/ansible-role-galaxy_docker/tasks/installtools.yml
@@ -15,11 +15,7 @@
 
 - meta: flush_handlers
 
-- name: Install required ephemeris package
-  pip:
-    name: "{{ galaxy_docker_ephemeris_package }}"
-    state: latest
-#    version: "{{ galaxy_docker_ephemeris_version }}"
+- include: installephemeris.yml
 
 - name: Make sure tool directory exists
   file:
