--- a/roles/ansible-role-galaxy_docker/defaults/main.yml
+++ b/roles/ansible-role-galaxy_docker/defaults/main.yml
@@ -86,9 +86,14 @@ galaxy_docker_tool_dir: "/tmp/galaxy_tool_lists"
 galaxy_docker_dbkeys_dir: "/tmp/galaxy_dkeys_lists"
 galaxy_docker_genome_copy_links: yes
 galaxy_docker_genomes_dest: "{{docker_export_location}}/genomes"
-galaxy_docker_ephemeris_repo: "https://github.com/rhpvorderman/ephemeris.git"
+
+# ephemeris run-data-managers is not properly working in current version 0.6.1.
+# This will be fixed in 0.6.2, but for now a git repo with the necessary fixes is used.
+# galaxyprojtect/ephemeris/master is not used, because it is the development branch, and therefore not stable.
+galaxy_docker_ephemeris_repo: "https://github.com/rhpvorderman/ephemeris.git"  
 galaxy_docker_ephemeris_branch: "allfixes"
 galaxy_docker_ephemeris_dir: "/opt/ephemeris"
+ephemeris_from_git: True
 
 #defaults for upgrade
 test_upgrade: False
