--- a/roles/ansible-role-galaxy_docker/tasks/run.yml
+++ b/roles/ansible-role-galaxy_docker/tasks/run.yml
@@ -59,6 +59,22 @@
     var: docker_published_ports.split()
     verbosity: 1
 
+- name: Set cluster shared folder
+  set_fact:
+    galaxy_docker_cluster_shared_folder: " {{optional_environment_settings.GALAXY_CONFIG_CLUSTER_FILES_DIRECTORY}}:{{optional_environment_settings.GALAXY_CONFIG_CLUSTER_FILES_DIRECTORY}}"
+
+- name: Create exported volumes
+  set_fact:
+    galaxy_docker_volumes: "{{ galaxy_docker_volumes + item }}"
+  with_items:
+    - "{{docker_export_location}}:/export/"
+    - "{{galaxy_docker_cluster_shared_folder | default('')}}"
+
+- name: Show volumes
+  debug:
+    var: galaxy_docker_volumes.split(' ')
+    verbosity: 0
+
 - name: Make sure export location exists
   file:
     path: "{{docker_export_location}}"
@@ -79,7 +95,7 @@
     crypt_scheme: sha512_crypt #Other secure choices: https://passlib.readthedocs.io/en/stable/narr/quickstart.html#recommended-hashes
     name: "{{galaxy_report_user}}"
     password: "{{galaxy_report_password}}"
-    path: "{{docker_export_location}}/reports_htpasswd" 
+    path: "{{docker_export_location}}/reports_htpasswd"
 
 - name: Update docker environment file
   template:
@@ -93,6 +109,7 @@
   docker_container:
     env_file: "{{docker_environment_file_location}}"
     volumes: "{{docker_export_location}}:/export/"
+    volumes: "{{galaxy_docker_volumes.split(' ')}}"
     image: "{{docker_image}}"
     name: "{{docker_container_name}}"
     published_ports: "{{docker_published_ports.split(' ')}}"
@@ -106,4 +123,3 @@
   file:
     state: absent
     path: "{{docker_environment_file_location}}"
-
