force rebuilding of the image

--- a/roles/ansible-role-galaxy_docker/tasks/customimage.yml
+++ b/roles/ansible-role-galaxy_docker/tasks/customimage.yml
@@ -20,7 +20,7 @@
     name: "{{docker_image}}"
     path: "{{docker_build_dir}}"
     pull: True
-    rm: True
+    force: yes
     state: present
 
 - name: remove docker build directory
