secured auth_conf file

--- a/roles/ansible-role-galaxy_docker/tasks/addldap.yml
+++ b/roles/ansible-role-galaxy_docker/tasks/addldap.yml
@@ -36,9 +36,12 @@
     dest: "{{docker_export_location}}/galaxy-central/config/auth_conf.xml"
     force: yes
     src: auth_conf.xml.j2
+    owner: "{{container_galaxy_user}}"
+    group: "{{container_galaxy_user}}"
+    mode: 0700
 
 - name:  Create script to include python-ldap and restart the container
-  template: 
+  template:
     dest: "{{docker_export_location}}/install_python_ldap.sh"
     mode: 700
     src: install_python_ldap.sh.j2
@@ -53,5 +56,3 @@
 - name: show installationresults
   debug:
     var: ldap_python_install.stdout
-
-
