--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,17 @@ pages:
       - Installing galaxy-docker-ansible: user_guide/installation.md
       - Configuring a galaxy instance: user_guide/configure_instance.md
       - Installing and administrating a galaxy instance: user_guide/install_administrate.md
-#  - Developer documentation:
+  - Developer documentation:
+    - Introduction: developer_docs/introduction.md
+    - Install docker: developer_docs/installdocker.md
+    - Galaxy welcome: developer_docs/galaxywelcome.md
+    - Nginx settings: developer_docs/nginxsettings.md
+    - Run docker galaxy: developer_docs/rundockergalaxy.md
+    - Add ldap: developer_docs/addldap.md
+    - Cron backup db: developer_docs/cronbackupdb.md
+    - Install tools: developer_docs/installtools.md
+    - Install genomes: installgenomes.md
+    - Delete galaxy: deletegalaxy.md
   - About:
       - Contributing: about/contributing.md
       - Author: about/author.md
