--- a/roles/galaxy-docker/tasks/installdocker.yml
+++ b/roles/galaxy-docker/tasks/installdocker.yml
@@ -9,17 +9,27 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# General preinstall for all distro's
+
+- name: Create docker default location
+  file:
+    state: directory
+    path: "{{ docker_default_location }}"
+
+- name: Set symbolic link for default location
+  file:
+    state: link
+    path: /var/lib/docker
+    src: "{{ docker_default_location }}"
+  when: "not docker_default_location=='/var/lib/docker'"
+
+# Distrospecific
 - name: Install Docker prerequisites on Ubuntu
   apt:
     update_cache: yes
     pkg: "{{ prerequisites }}"
     state: latest
   when: "ansible_distribution == 'Ubuntu'"
-
-- name: Install required PIP packages
-  pip:
-    name: "{{ pip_packages }}"
-    state: latest
 
 - name: Install Docker key on Ubuntu
   apt_key:
@@ -32,18 +42,6 @@
   when: "ansible_distribution == 'Ubuntu'"
   register: repo_output
 
-- name: Create docker default location
-  file:
-    state: directory
-    path: "{{ docker_default_location }}"
-
-- name: Set symbolic link for default location
-  file:
-    state: link
-    path: /var/lib/docker
-    src: "{{ docker_default_location }}" 
-  when: "not docker_default_location=='/var/lib/docker'"  
-
 - name: Install Docker packages on Ubuntu
   apt:
     pkg: "{{ packages }}"
@@ -51,3 +49,9 @@
     update_cache: yes
   when: "ansible_distribution == 'Ubuntu'"
 
+# General postinstall
+
+- name: Install required PIP packages
+  pip:
+    name: "{{ pip_packages }}"
+    state: latest
