--- a/roles/galaxy-docker/tasks/galaxywelcome.yml
+++ b/roles/galaxy-docker/tasks/galaxywelcome.yml
@@ -10,7 +10,9 @@
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 # tasks file for galaxywelcome
-
+# This task:
+# - Deletes all existing welcome files from the export folder
+# - copies all new welcome html files to the export folder
 
 
 - name: Make sure export folder exists
