--- a/roles/galaxy-docker/tasks/installephemeris.yml
+++ b/roles/galaxy-docker/tasks/installephemeris.yml
@@ -9,6 +9,10 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# this task installs ephemeris. It is used for installing tools and genomes.
+# Unfortunately fixes upstream have not been incorporated in a pypi package yet.
+# Hence the workaround with a patched git repo.
+
 - name: Install required ephemeris package
   pip:
     name: "{{ galaxy_docker_ephemeris_package }}"
