--- a/roles/galaxy-docker/tasks/addldap.yml
+++ b/roles/galaxy-docker/tasks/addldap.yml
@@ -1,6 +1,7 @@
 ---
 # tasks file for addldap
-
+# This task writes an auth.conf.xml file to the galaxy settings directory
+# and installs the python ldap module in the container's virtual environment.
 - name: Show ldap variables
   debug:
     var: ldap
