--- a/roles/galaxy-docker/tasks/importdb.yml
+++ b/roles/galaxy-docker/tasks/importdb.yml
@@ -10,6 +10,8 @@
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 # tasks file for importdb
+# This imports a  database in galaxy.
+# This does overwrite the existing database.
 
 - name: Register the files that are copied
   find:
