--- a/roles/galaxy-docker/tasks/nginxsettings.yml
+++ b/roles/galaxy-docker/tasks/nginxsettings.yml
@@ -10,6 +10,8 @@
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 # tasks file for nginxsettings
+# This sets a nginx settings file. Currently only one galaxy instance and one test upgrade instance is supported.
+# To install multiple galaxies in the same vm this needs to be changed.
 
 - name: set nginx settings
   set_fact:
