--- a/roles/galaxy-docker/tasks/setup.yml
+++ b/roles/galaxy-docker/tasks/setup.yml
@@ -9,7 +9,8 @@
 #
 # You should have received a copy of the GNU Affero General Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
 
-# tasks file for cronbackupdb
+# This installs pigz and creates a backup user and folder so regular backups
+# can be run via cron.
 
 - name: make sure pigz is  installed
   package:
