--- a/roles/galaxy-docker/tasks/installdocker/CentOS.yml
+++ b/roles/galaxy-docker/tasks/installdocker/CentOS.yml
@@ -18,23 +18,34 @@
     - yum-utils
     - device-mapper-persistent-data
     - lvm2
+    - epel-release
+
+# No ansible module available
+- name: Enable extras repository
+  command: yum-config-manager --enable extras
+
+# An attempt was made to install the repository using yum_repository but this failed.
+- name: install repository using yum-config-manager
+  command: yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
 
 - name: Install gpg key
   rpm_key:
     key: "{{ docker_gpg_key}}"
     state: present
 
-- name: Install Docker repository
-  yum_repository:
-    name: docker
-    baseurl: "https://download.docker.com/linux/centos/docker-ce.repo"
-    state: present
-    description: Docker Community Edition Repository
-    enabled: no
-    gpgkey: "{{docker_gpg_key}}"
+
+#- name: Install Docker repository
+#  yum_repository:
+#    name: docker
+#    baseurl: "https://download.docker.com/linux/centos/docker-ce.repo"
+#    state: present
+#    description: Docker Community Edition Repository
+#    enabled: no
+#    gpgkey: "{{docker_gpg_key}}"
+
 - name: Install Docker packages
   yum:
     pkg: "{{ docker_packages }}"
     state: latest
     update_cache: yes
-    enablerepo: docker
+#    enablerepo: docker
