--- a/roles/galaxy-docker/tasks/nginxsettings.yml
+++ b/roles/galaxy-docker/tasks/nginxsettings.yml
@@ -77,7 +77,9 @@
 - name: check whether SE_linux is disabled
   set_fact:
     ansible_selinux: False
-  when: ansible_selinux.status == 'disabled'
+  when:
+    - ansible_selinux
+    - ansible_selinux.status == 'disabled'
 
 - name: show se linux
   debug:
